<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".activities.RegistrationActivity">



        <LinearLayout
            android:id="@+id/back_button"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            android:gravity="center"
            android:padding="@dimen/_13dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_back_black_24dp" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginLeft="@dimen/_15dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="#1b3554"
            android:fontFamily="@font/proxima_nova_semibold"
            android:letterSpacing="0.2"
            android:text="@string/registration"
            />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:background="@color/white">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15dp"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:hint="@string/name"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mail_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mailtext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:hint="@string/email_id"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="10"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:hint="@string/mobile_number"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:hint="@string/prompt_password"
                        android:drawableRight="@drawable/ic_visibility_off"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7dp"
                    android:layout_marginLeft="@dimen/_3dp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:lineSpacingMultiplier="1"
                    android:text="@string/password_should_be_a_combination_of_number_and_special_character"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="@color/text_color" />


                <Button
                    android:id="@+id/register_here"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="44dp"
                    android:layout_marginRight="44dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rectange_background"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:stateListAnimator="@null"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    tools:targetApi="lollipop" />



            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>
