<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/_15dp"
            android:src="@drawable/ic_edit"
            />
        <RelativeLayout
            android:id="@+id/headlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_15dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back_black_24dp"/>

            </RelativeLayout>
            <TextView
                android:id="@+id/title_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/user_profile"
                android:layout_below="@+id/back_button"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="#1b3554"
                android:fontFamily="@font/proxima_nova_semibold"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_marginLeft="@dimen/_19dp" />


        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nested_scroll"
            android:layout_below="@+id/headlayout"
            android:layout_marginTop="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15dp"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:hint="Name"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/desc_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:hint="@string/last_name"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:hint="Email"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:hint="Address"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="44dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="44dp"
                    android:background="@drawable/rectange_background"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:stateListAnimator="@null"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    tools:targetApi="lollipop" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout></layout>